更新单元测试与模板

--- a/src/app/pages/acl-index/acl-index.component.html
+++ b/src/app/pages/acl-index/acl-index.component.html
@@ -45,7 +45,7 @@
     <nz-space-item>
       <button
         nz-button
-        nzType='danger'
+        nzDanger
         [disabled]='!lists.batch'
         (click)='deleteCheckData()'
       >
