--- a/src/app/pages/admin-index/admin-index.component.html
+++ b/src/app/pages/admin-index/admin-index.component.html
@@ -1,94 +1,94 @@
 <bit-header>
-  <button nz-button nzType="primary" [bitOpen]="['admin-add']">
+  <button nz-button nzType='primary' [bitOpen]="['admin-add']">
     <span>{{bit.l['add']}}</span>
   </button>
 </bit-header>
 <ng-template #title>
   <nz-space>
     <nz-space-item *ngIf="lists.hasSearch('username')">
-      <nz-input-group nzSearch [nzAddOnAfter]="nzAddOnAfter" style="width: 320px">
+      <nz-input-group nzSearch [nzAddOnAfter]='nzAddOnAfter' style='width: 320px'>
         <input
           nz-input
-          [bitSearchStart]="lists"
+          [bitSearchStart]='lists'
           [placeholder]="bit.l['search']"
           [(ngModel)]="lists.search['username'].value"
-          (after)="getLists(true)"
+          (after)='getLists(true)'
         >
       </nz-input-group>
       <ng-template #nzAddOnAfter>
         <button
           nzSearch
-          nz-button nzType="primary"
-          [bitSearchStart]="lists"
-          (after)="getLists(true)"
+          nz-button nzType='primary'
+          [bitSearchStart]='lists'
+          (after)='getLists(true)'
         >
-          <i nz-icon nzType="search"></i>
+          <i nz-icon nzType='search'></i>
         </button>
       </ng-template>
     </nz-space-item>
     <nz-space-item>
-      <button nz-button nzType="default" (click)="getLists(true)">
-        <i nz-icon nzType="sync"></i> {{bit.l['refreshLists']}}
+      <button nz-button nzType='default' (click)='getLists(true)'>
+        <i nz-icon nzType='sync'></i> {{bit.l['refreshLists']}}
       </button>
     </nz-space-item>
     <nz-space-item>
       <button
         nz-button
-        nzType="default"
-        [bitSearchClear]="lists"
-        (after)="getLists(true)"
+        nzType='default'
+        [bitSearchClear]='lists'
+        (after)='getLists(true)'
       >
-        <i nz-icon nzType="clear"></i> {{bit.l['clearSearch']}}
+        <i nz-icon nzType='clear'></i> {{bit.l['clearSearch']}}
       </button>
     </nz-space-item>
     <nz-space-item>
       <button
         nz-button
-        nzType="danger"
-        [disabled]="!lists.batch"
-        (click)="deleteCheckData()"
+        nzDanger
+        [disabled]='!lists.batch'
+        (click)='deleteCheckData()'
       >
-        <i nz-icon nzType="rest"></i> {{bit.l['bulkDelete']}}
+        <i nz-icon nzType='rest'></i> {{bit.l['bulkDelete']}}
       </button>
     </nz-space-item>
   </nz-space>
 </ng-template>
-<nz-card [nzTitle]="title">
+<nz-card [nzTitle]='title'>
   <nz-table
     #table
-    [nzData]="lists.data"
-    [nzLoading]="lists.loading"
-    [nzTotal]="lists.totals"
-    [nzPageSize]="lists.limit"
-    [nzFrontPagination]="false"
-    [(nzPageIndex)]="lists.index"
-    (nzPageIndexChange)="getLists()"
-    nzSize="middle"
+    [nzData]='lists.data'
+    [nzLoading]='lists.loading'
+    [nzTotal]='lists.totals'
+    [nzPageSize]='lists.limit'
+    [nzFrontPagination]='false'
+    [(nzPageIndex)]='lists.index'
+    (nzPageIndexChange)='getLists()'
+    nzSize='middle'
   >
     <thead>
     <tr>
-      <th nzShowCheckbox nzWidth="65px"
-          [(nzChecked)]="lists.checked"
-          [nzIndeterminate]="lists.indeterminate"
-          (nzCheckedChange)="lists.checkedAll($event)"></th>
-      <th nzWidth="200px">{{bit.l['username']}}</th>
-      <th nzWidth="200px">{{bit.l['role']}}</th>
-      <th nzWidth="200px">{{bit.l['call']}}</th>
-      <th nzWidth="150px">{{bit.l['phone']}}</th>
-      <th nzWidth="200px">{{bit.l['email']}}</th>
+      <th nzShowCheckbox nzWidth='65px'
+          [(nzChecked)]='lists.checked'
+          [nzIndeterminate]='lists.indeterminate'
+          (nzCheckedChange)='lists.checkedAll($event)'></th>
+      <th nzWidth='200px'>{{bit.l['username']}}</th>
+      <th nzWidth='200px'>{{bit.l['role']}}</th>
+      <th nzWidth='200px'>{{bit.l['call']}}</th>
+      <th nzWidth='150px'>{{bit.l['phone']}}</th>
+      <th nzWidth='200px'>{{bit.l['email']}}</th>
       <th>{{bit.l['status']}}</th>
-      <th nzWidth="300px"
-          nzRight="0px">{{bit.l['action']}}</th>
+      <th nzWidth='300px'
+          nzRight='0px'>{{bit.l['action']}}</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let data of table.data">
+    <tr *ngFor='let data of table.data'>
       <td nzShowCheckbox
-          [(nzChecked)]="data.checked"
-          (nzCheckedChange)="lists.refreshStatus()"></td>
+          [(nzChecked)]='data.checked'
+          (nzCheckedChange)='lists.refreshStatus()'></td>
       <td>{{data.username}}</td>
       <td>
-        <ng-container *ngIf="role[data.role]!==undefined">
+        <ng-container *ngIf='role[data.role]!==undefined'>
           {{(role[data.role].name)|Locale:bit.locale}}
         </ng-container>
       </td>
@@ -97,22 +97,22 @@
       <td>{{data.email}}</td>
       <td>
         <nz-switch
-          [(ngModel)]="data.status"
+          [(ngModel)]='data.status'
           [nzCheckedChildren]="bit.l['on']"
           [nzUnCheckedChildren]="bit.l['off']"
-          [bitStatusChange]="adminService.status(data)"
-          [bitControl]="true"
-          (response)="statusFeedback($event)"
+          [bitStatusChange]='adminService.status(data)'
+          [bitControl]='true'
+          (response)='statusFeedback($event)'
         >
         </nz-switch>
       </td>
       <td>
         <a [bitOpen]="['admin-edit',data.id]">
-          <i nz-icon nzType="edit"></i> {{bit.l['edit']}}
+          <i nz-icon nzType='edit'></i> {{bit.l['edit']}}
         </a>
-        <nz-divider nzType="vertical"></nz-divider>
-        <a (click)="deleteData([data.id])">
-          <i nz-icon nzType="delete"></i> {{bit.l['delete']}}
+        <nz-divider nzType='vertical'></nz-divider>
+        <a (click)='deleteData([data.id])'>
+          <i nz-icon nzType='delete'></i> {{bit.l['delete']}}
         </a>
       </td>
     </tr>
